K1J-1051: Should not hide values for previous certificate if other care provider